# Generic-Robot-Framework

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/macros/: launch.rs  main.rs  message.rs  mod.rs
src/models/: message.rs  mod.rs  request.rs  std.rs  tnode.rs  topic.rs  tpub.rs  tsub.rs
src/traits/: mod.rs
