[package]
name = "generic_robot_framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonschema = "0.17.1"
schemars = "0.8.12"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.0"