[package]
name = "generic_robot_framework"
version = "0.1.1"
edition = "2021"
description = "This crate allows you to manage publishers, subscribers and nodes in your Cargo packages. It is made to work with the Generic Robot Framework CLI."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonschema = "0.17.1"
schemars = "0.8.12"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.0"